[package]
name = "ecies-rust"
version = "0.1.0"
authors = ["maohongbin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signature = { version = ">= 1.2.2, < 1.3.0", default-features = false, features = ["rand-preview"] }
ecies = { version = "0.1.4" }
secp256k1 = { version = "0.19.0", features = ["recovery"] }
bitcoin_hashes = { version = "0.9.0" }